# pedestrian_evacuation_optimization

./: .gitignore  ea.json  ea_emergency_accesses.txt  ea_hustory.txt  ea_result.json  greedy_emergency_accesses.txt  iea.json  neumann.npy  pyproject.toml  ql_emergency_accesses.txt  ql_hustory.txt  ql_result.json  qlearning_exit_workflow.pptx  result_cma_es.json  result_ea.json  result_iea.json  result_ql.json  results_QLearning.json  resutl_greedy.json  test.py
configs/: conf.txt  ea.json  iea.json  simulation.json
dataset/: ea.json  greedy.json  iea.json  simulation.json
dataset/environments/: environment-example-supermarket.json  environments_supermarket.json
dataset/p200/: finall_grid_200_1.txt  finall_grid_200_10.txt  finall_grid_200_2.txt  finall_grid_200_3.txt  finall_grid_200_4.txt  finall_grid_200_5.txt  finall_grid_200_6.txt  finall_grid_200_7.txt  finall_grid_200_8.txt  finall_grid_200_9.txt
dataset/p400/: finall_grid_400_1.txt  finall_grid_400_10.txt  finall_grid_400_2.txt  finall_grid_400_3.txt  finall_grid_400_4.txt  finall_grid_400_5.txt  finall_grid_400_6.txt  finall_grid_400_7.txt  finall_grid_400_8.txt  finall_grid_400_9.txt
dataset/p600/: finall_grid_600_1.txt  finall_grid_600_10.txt  finall_grid_600_2.txt  finall_grid_600_3.txt  finall_grid_600_4.txt  finall_grid_600_5.txt  finall_grid_600_6.txt  finall_grid_600_7.txt  (+2 more)
src/: config.py  create_environment.py  draw_environment.py  result.py  run.py  run_cama_es.py  run_ea.py  run_greedy.py  run_iea.py  run_memetic.py  run_ql.py  test.py  test_environment.py  test_simulator.py
(+161 files in other folders)
